clusters/k8s-01/apps/kube-system/cilium/configs/vip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-vip
  annotations:
    lbipam.cilium.io/ips: 10.0.1.3
    external-dns.alpha.kubernetes.io/hostname: api.k8s-01.suslian.engineer
spec:
  type: LoadBalancer
  selector:
    k8s-app: kube-apiserver
    tier: control-plane
  ports:
    - name: https
      port: 6443
      protocol: TCP
      targetPort: 6443
