clusters/k8s-01/apps/kube-system/cilium/configs/gateway-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external.suslian.engineer
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/sharing-key: "external"
      lbipam.cilium.io/sharing-cross-namespace: "*"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.suslian.engineer"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.suslian.engineer"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: gateway-tls
    - name: https-k8s-01
      protocol: HTTPS
      port: 443
      hostname: "*.k8s-01.suslian.engineer"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: gateway-tls
    - name: https-s3-k8s-01
      protocol: HTTPS
      port: 443
      hostname: "*.s3.k8s-01.suslian.engineer"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: gateway-tls
    - name: https-iot
      protocol: HTTPS
      port: 443
      hostname: "*.iot.suslian.engineer"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: gateway-tls
    - name: https-volcan
      protocol: HTTPS
      port: 443
      hostname: "*.volcan.cloud"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: gateway-tls
